--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Yanjie Zhou"
+  name             : "Yanjie Zhou (周艳杰)"
   avatar           : "zhou.png"
   bio              : "Ph.D student of Department of Industrial Engineering at Pusan National University"
   location         : "Location"
