--- a/_config.yml
+++ b/_config.yml
@@ -198,7 +198,7 @@ defaults:
       type: posts
     values:
       layout: single
-      author_profile: true
+      #author_profile: true
       read_time: true
       comments: true
       share: true
@@ -209,7 +209,7 @@ defaults:
       type: pages
     values:
       layout: single
-      author_profile: true
+      #author_profile: true
   # _teaching
   - scope:
       path: ""
@@ -225,7 +225,7 @@ defaults:
       type: publications
     values:
       layout: single
-      author_profile: false
+      #author_profile: false
       share: true
       comments: true
   # _portfolio
@@ -234,7 +234,7 @@ defaults:
       type: portfolio
     values:
       layout: single
-      author_profile: false
+      #author_profile: false
       share: true
       comment: true
   # _talks
@@ -243,7 +243,7 @@ defaults:
       type: talks
     values:
       layout: talk
-      author_profile: false
+      #author_profile: false
       share: true
 
 # Sass/SCSS
