--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 minimal_mistakes_skin    :  "air"# "default" , "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
-
+theme: minimal-mistakes-jekyll
 # Site Settings
 locale                   : "en-US"
 title                    : "Yanjie Zhou / Homepage"
