--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 
-theme: minimal-mistakes-jekyll
-minimal_mistakes_skin    :  "air"# "default" , "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+#theme: minimal-mistakes-jekyll
+#minimal_mistakes_skin    :  "air"# "default" , "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 # Site Settings
 locale                   : "en-US"
 title                    : "Yanjie Zhou / Homepage"
