--- a/_config.yml
+++ b/_config.yml
@@ -210,6 +210,7 @@ defaults:
       type: pages
     values:
       layout: single
+      classes: wide
       #author_profile: true
   # _teaching
   - scope:
