--- a/_config.yml
+++ b/_config.yml
@@ -199,6 +199,7 @@ defaults:
       type: posts
     values:
       layout: single
+      classes: wide
       #author_profile: true
       read_time: true
       comments: true
@@ -218,6 +219,7 @@ defaults:
       type: teaching
     values:
       layout: single
+      classes: wide
       author_profile: false
       share: true
       comments: true
@@ -247,6 +249,7 @@ defaults:
       type: talks
     values:
       layout: talk
+      classes: wide
       #author_profile: false
       share: true
 
