--- a/_config.yml
+++ b/_config.yml
@@ -292,6 +292,7 @@ plugins:
   - jekyll-gist
   - jekyll-feed
   - jekyll-redirect-from
+  - jekyll/scholar
 # mimic GitHub Pages with --safe
 whitelist:
   - jekyll-paginate
