--- a/_config.yml
+++ b/_config.yml
@@ -265,14 +265,14 @@ scholar:
   sort_by: none
   order: ascending
 
-  source: ./_bibliography
-  bibliography: paperBib.bib
+
+  bibliography: bibliography.bib
   bibliography_template: "{{reference}}"
 
   replace_strings: true
   join_strings:    true
 
-  details_dir:    bibliography
+
   details_layout: bibtex.html
   details_link:   Details
 
