--- a/_config.yml
+++ b/_config.yml
@@ -258,6 +258,10 @@ sass:
   sass_dir: _sass
   style: compressed # http://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
 
+gems:
+  - jekyll-sitemap
+  - jekyll-scholar
+
 scholar:
   style: assets/bibliography/ieee-with-url.csl 
   locale: en
