--- a/_config.yml
+++ b/_config.yml
@@ -295,9 +295,10 @@ plugins:
   - jekyll-gist
   - jekyll-feed
   - jekyll-redirect-from
-  - jekyll-scholar
+  - jekyll/scholar
 # mimic GitHub Pages with --safe
 whitelist:
+  - jekyll/scholar
   - jekyll-paginate
   - jekyll-sitemap
   - jekyll-gist
