--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ analytics:
 author:
   name             : "Yanjie Zhou (周艳杰)"
   avatar           : "zhou.png"
-  bio              : "Assistant professor, School of Management Engineering, Zhengzhou University"
+  bio              : "Ph.D. Department of Industrial Engineering, Pusan National University" #Assistant professor, School of Management Engineering, Zhengzhou University"
   location         : "Location"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=7mZV_YsAAAAJ&hl=en"
