--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,8 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # `jekyll serve`. If you change this file, please restart the server process.
 
-
+remote_theme: "mmistakes/minimal-mistakes"
+minimal_mistakes_skin    : "air" #"dark"  , "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 #theme: minimal-mistakes-jekyll
 #minimal_mistakes_skin    :  "air"# "default" , "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 # Site Settings
