--- a/_config.yml
+++ b/_config.yml
@@ -203,6 +203,7 @@ defaults:
       classes: wide
       #author_profile: true
       toc: true
+      toc_sticky: true
       toc_label: 'Menu'
       toc_icon: 'paperclip'
       read_time: true
