--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,4 +6,14 @@ main:
   - title: "Talks"
     url: /talks/    
 
+  - title: "Teaching"
+    url: /teaching/    
     
+  - title: "Photos"
+    url: /portfolio/
+        
+  - title: "Blog Posts"
+    url: /year-archive/
+    
+  - title: "CV"
+    url: /cv/
