--- a/_config.yml
+++ b/_config.yml
@@ -202,10 +202,10 @@ defaults:
       layout: single
       classes: wide
       #author_profile: true
-      toc: true
-      toc_sticky: true
-      toc_label: 'Menu'
-      toc_icon: 'paperclip'
+     # toc: true
+      #toc_sticky: true
+     # toc_label: 'Menu'
+     # toc_icon: 'paperclip'
       read_time: true
       comments: true
       share: true
