--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ analytics:
 # Site Author
 author:
   name             : "Yanjie Zhou (周艳杰)"
-  avatar           : "zhou.png"
+  avatar           : "zhou.jpg"
   bio              : "Ph.D. Department of Industrial Engineering, Pusan National University" #Assistant professor, School of Management Engineering, Zhengzhou University"
   location         : "Location"
   employer         :
