--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ analytics:
 author:
   name             : "Yanjie Zhou (周艳杰)"
   avatar           : "zhou.jpg"
-  bio              : "Ph.D. Department of Industrial Engineering, Pusan National University" #Assistant professor, School of Management Engineering, Zhengzhou University"
+  bio              : "Assistant professor, School of Management Engineering, Zhengzhou University" #"
   location         : "Location"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=7mZV_YsAAAAJ&hl=en"
