--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ analytics:
 # Site Author
 author:
   name             : "Yanjie Zhou (周艳杰)"
-  avatar           : "zhou.jpg"
+  avatar           : "zhou2025.png"
   bio              : "Associate professor, School of Management, Zhengzhou University" #"
   location         : "Location"
   employer         :
