--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ analytics:
 author:
   name             : "Yanjie Zhou (周艳杰)"
   avatar           : "zhou2025.png"
-  bio              : "Associate professor, School of Management, Zhengzhou University" #"
+  bio              : "Associate professor, Department Head of Logistics Management, School of Management, Zhengzhou University" #"
   location         : "Location"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=7mZV_YsAAAAJ&hl=en"
