--- a/_config.yml
+++ b/_config.yml
@@ -284,7 +284,7 @@ plugins:
   - jekyll-feed
   - jekyll-redirect-from
   - jemoji
-  - jekyll/scholar
+  - jekyll-scholar
 # mimic GitHub Pages with --safe
 whitelist:
   - jekyll/scholar
