--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -41,9 +41,7 @@ jobs:
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
           cache-version: 0 # Increment this number if you need to re-download cached gems
        - name: Upgrade Bundler
-         run: |
-          gem install bundler -v '>= 2.5' # 升级到 2.5+ 版本
-          bundle update # 更新依赖
+         run: gem install bundler -v '>= 2.5' bundle update # 更新依赖
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
